--- a/sportResultBoot/src/main/resources/templates/login.html
+++ b/sportResultBoot/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 	<title>Login V17</title>
 	<meta charset="UTF-8">
