--- a/sportResultBoot/src/main/resources/templates/retrouverCompte.html
+++ b/sportResultBoot/src/main/resources/templates/retrouverCompte.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-	<html lang="en">
+	<html xmlns:th="http://www.thymeleaf.org">
 	<head>
 		<title>Login V17</title>
 		<meta charset="UTF-8">
@@ -34,7 +34,7 @@
 				<div class="wrap-login100">
 					<form action = "team" method= "post" class="login100-form validate-form">
 						<span class="login100-form-title p-b-34">
-							Entrez l'email associé à votre compte
+							Entrez l'email associï¿½ ï¿½ votre compte
 						</span>
 						
 						<div class="wrap-input100 validate-input m-b-20" data-validate="Type user name">
