comit test API object mapper

--- a/sportResultBoot/src/main/resources/templates/inscription.html
+++ b/sportResultBoot/src/main/resources/templates/inscription.html
@@ -36,7 +36,7 @@
 	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100">
-				<form action = "team" method= "post" class="login100-form validate-form">
+				<form action = "login" method= "post" class="login100-form validate-form">
 					<span class="login100-form-title p-b-34">
 						S'inscrire
 					</span>
@@ -93,7 +93,7 @@
 
 					
 					<div class="container-login100-form-btn">
-						<button class="login100-form-btn">
+						<button  class="login100-form-btn">
 							Se connecter
 						</button>
 					</div>
@@ -108,7 +108,7 @@
 					</div>
 
 					<div class="w-full text-center">
-						<a href="#" class="txt3">
+						<a th:href="@{/login}" class="txt3">
 							J'ai déjà un compte
 						</a>
 					</div>
