--- a/sportResultBoot/src/main/resources/templates/login.html
+++ b/sportResultBoot/src/main/resources/templates/login.html
@@ -26,10 +26,76 @@
         <link rel="stylesheet" type="text/css" href="csslogin/util.css">
         <link rel="stylesheet" type="text/css" href="csslogin/main.css">
     <!--===============================================================================================-->
+    
+<style>
+#snackbar {
+  visibility: hidden; /* Hidden by default. Visible on click */
+  min-width: 250px; /* Set a default minimum width */
+  margin-left: -125px; /* Divide value of min-width by 2 */
+  background-color: #333; /* Black background color */
+  color: #fff; /* White text color */
+  text-align: center; /* Centered text */
+  border-radius: 2px; /* Rounded borders */
+  padding: 16px; /* Padding */
+  position: fixed; /* Sit on top of the screen */
+  z-index: 1; /* Add a z-index if needed */
+  left: 65% ; /* Center the snackbar */
+  bottom: 50px; /* 30px from the bottom */
+}
+
+/* Show the snackbar when clicking on a button (class added with JavaScript) */
+#snackbar.show {
+  visibility: visible; /* Show the snackbar */
+  /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
+  However, delay the fade out process for 2.5 seconds */
+  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+/* Animations to fade the snackbar in and out */
+@-webkit-keyframes fadein {
+  from {bottom: 0; opacity: 0;}
+  to {bottom: 50px; opacity: 1;}
+}
+
+@keyframes fadein {
+  from {bottom: 0; opacity: 0;}
+  to {bottom: 50px; opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+  from {bottom: 50px; opacity: 1;}
+  to {bottom: 0; opacity: 0;}
+}
+
+@keyframes fadeout {
+  from {bottom: 50px; opacity: 1;}
+  to {bottom: 0; opacity: 0;}
+}
+
+</style>    
 
 </head>
-<body>
-	
+<body onload="myFunction()">
+
+<script>
+function myFunction() {
+	  // Get the snackbar DIV
+	  var x = document.getElementById("snackbar");
+
+	  // Add the "show" class to DIV
+	  x.className = "show";
+
+	  // After 3 seconds, remove the show class from DIV
+	  setTimeout(function(){ x.className = x.className.replace("show", ""); }, 3000);
+	}
+
+</script>
+
+
+
+
+
 	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100">
@@ -68,6 +134,9 @@
 						</a>
 					</div>
 				</form>
+				
+				<!-- The actual snackbar -->
+<div th:if="${success}" id="snackbar" th:text="${success}">Some text some message..</div>
 
 				<div class="login100-more" style="background-image: url('https://images.unsplash.com/photo-1543351611-58f69d7c1781?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTh8fHNvY2NlcnxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=600&q=60');"></div>
 			</div>
