--- a/sportResultBoot/src/main/resources/templates/calendrier.html
+++ b/sportResultBoot/src/main/resources/templates/calendrier.html
@@ -13,14 +13,16 @@
     <link rel="stylesheet" href="css/jquery-ui.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    
 
 
     <link rel="stylesheet" href="css/aos.css">
 
     <link rel="stylesheet" href="css/style.css">
     
-<!--     <link rel="stylesheet" -->
-<!-- 	href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"> -->
+    <script src="https://kit.fontawesome.com/5f6fc52d69.js" crossorigin="anonymous"></script>
+    
+     
 <!-- <link rel="stylesheet" -->
 <!-- 	href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"> -->
 <!-- <link rel="stylesheet" href="css1/bootstrap.min.css"> -->
@@ -48,7 +50,7 @@
     
     </head>
   <body>
-  
+
   <script type="text/javascript" src="js1/jquery.min.js"></script>
 <script type="text/javascript" src="js1/popper.min.js"></script>
 <script type="text/javascript" src="js1/bootstrap.min.js"></script>
@@ -159,10 +161,28 @@
             </div>
           </div>
         </div>
-        
-  
+      <div class="row mb-5">
+        <div class="text-center col-md-12">  
+			  <a  th:style="${season==2021 ? 'color:black' : 'color:none'}" class="btn btn-primary btn-sm rounded-0 py-2 px-1 float-left" th:href="@{/calendrier1?season=2021}"> 2021</a>
+			  <a  th:style="${season==2020 ? 'color:black' : 'color:none'}" class="btn btn-primary btn-sm rounded-0 py-2 px-1 float-none" th:href="@{/calendrier1?season=2020}"> 2020</a>
+			  
+			  <a  class="btn btn-primary btn-sm rounded-0 py-2 px-1 float-right"  th:href="@{/matchToCome}"> Matchs à venir</a> 
+			  <a  class="btn btn-primary btn-sm rounded-0 py-2 px-1 float-right"  th:href="@{/matchFinished?season=2021}"> Matchs terminés</a>
+  		</div></div>
+  		
+  		<a  th:if="${previous}" class="btn btn-primary btn-sm rounded-0 py-2 px-1 float-none" th:href="@{'/matchByDatePrevious?fromDate='+${fromDate}}" ><</a>
+ 		<a  class="btn btn-primary btn-sm rounded-0 py-2 px-1 float-none" th:href="@{'/matchByDate?fromDate='+${fromDate}}" th:utext="${monthYear}"></a>
+ 		<a  th:if="${next}" class="btn btn-primary btn-sm rounded-0 py-2 px-1 float-none" th:href="@{'/matchByDateNext?fromDate='+${fromDate}}" >></a>
  
-  <table id="dtBasicExample" class="table  " cellspacing="0" width="100%">
+  
+<!--   <form class="float-left" action="matchByDate" method="post"> -->
+<!-- 	<input type="date" name="dateMatch" placeholder="YYYY-MM-dd"> -->
+<!-- 	<button class="btn btn-primary btn-sm rounded-0 py-2 px-1  " type="submit"   >Search</button> -->
+<!-- 	</form> -->
+	
+  <br><br>
+ 		
+  <table th:if="${matchs}" id="dtBasicExample" class="table  " cellspacing="0" width="100%">
   <thead>
     <tr>
     
@@ -170,7 +190,7 @@
 		<th class="th-sm">Team domicile</th>
 		<th class="th-sm">Score</th>
 		<th class="th-sm">Team extérieure</th>
-		<th class="th-sm">Stade</th>
+
     </tr>
   </thead>
   <tbody>
@@ -187,10 +207,10 @@
       </td>
    
       <td>
-      	<div class="text-center text-lg-left float-left ">
+      	<div class="text-center text-lg-left float-none ">
            <div class="d-block d-lg-flex align-items-center">
              <div class="image image-small text-center mb-3 mb-lg-0 mr-lg-3">
-               <img src="images/img_1_sq.jpg" alt="Image" class="img-fluid">
+               <img th:src="${match.teamHome.logo}" alt="Image" class="img-fluid">
              </div>
              <div class="text">
                <h3 class="h5 mb-0 text-black" th:utext="${match.teamHome.name}">Packers</h3>
@@ -200,10 +220,17 @@
          </div>
       </td>
       <td>
-      	<div class="col-md-4 col-lg-4 text-right mb-4 mb-lg-0">
+      	<div th:if="${match.status=='Match Finished'}" class="col-md-12 col-lg-10 text-left my-4 mb-lg-0">
+        	<div class="d-inline-block">
+                  <div  class="bg-black py-2 px-4 mb-2 text-white d-inline-block rounded">
+                  	<span class="h5"  th:utext="${match.scoreHome +'  -  '+match.scoreAway}">3:2</span>
+                  </div>
+            </div>
+       	</div>
+       	<div th:if="!${match.status=='Match Finished'}" class="col-md-12 col-lg-10 text-left my-4 mb-lg-0">
         	<div class="d-inline-block">
                   <div class="bg-black py-2 px-4 mb-2 text-white d-inline-block rounded">
-                  	<span class="h5" th:utext="${match.scoreHome +'   -   ' + match.scoreAway}">3:2</span>
+                  	<span class="h5" >A venir</span>
                   </div>
             </div>
        	</div>
@@ -212,8 +239,8 @@
    		 <div class="col-md-4 col-lg-4 text-center text-lg-left float-none ">
                 <div class="">
                   <div class="d-block d-lg-flex align-items-center">
-                    <div class="image image-small ml-lg-3 mb-3 mb-lg-0 order-2">
-                      <img src="images/img_4_sq.jpg" alt="Image" class="img-fluid">
+                    <div class="image image-small text-center ml-lg-3 mb-3 mb-lg-0 mr-lg-3">
+                      <img th:src="${match.teamAway.logo}" alt="Image" class="img-fluid">
                     </div>
                     <div class="text order-1 w-100">
                       <h3 class="h5 mb-0 text-black" th:utext="${match.teamAway.name}">Steelers</h3>
@@ -223,6 +250,305 @@
                 </div>
               </div>
       </td>
+     
+      
+    </tr>
+  </tbody>
+  
+</table>
+
+<table th:if="${matchsBySeason}" id="dtBasicExample" class="table  " cellspacing="0" width="100%">
+  <thead>
+    <tr>
+    
+     	<th class="th-sm">Date</th>
+		<th class="th-sm">Team domicile</th>
+		<th class="th-sm">Score</th>
+		<th class="th-sm">Team extérieure</th>
+
+    </tr>
+  </thead>
+  <tbody>
+    <tr th:each="match:${matchsBySeason}">
+    <td >
+      	<div class="text-center float-left">
+           <div class="d-block d-lg-flex align-items-center">
+             
+             <div class="text">
+               <h3 class="h5 mb-0 text-black" th:utext="${match.date}">17-02-2022</h3>
+             </div>
+           </div>
+         </div>
+      </td>
+   
+      <td>
+      	<div class="text-center text-lg-left float-none ">
+           <div class="d-block d-lg-flex align-items-center">
+             <div class="image image-small text-center mb-3 mb-lg-0 mr-lg-3">
+               <img th:src="${match.teamHome.logo}" alt="Image" class="img-fluid">
+             </div>
+             <div class="text">
+               <h3 class="h5 mb-0 text-black" th:utext="${match.teamHome.name}">Packers</h3>
+<!--                <span class="text-uppercase small country text-black">Brazil</span> -->
+             </div>
+           </div>
+         </div>
+      </td>
+      <td>
+      	<div th:if="${match.status=='Match Finished'}" class="col-md-12 col-lg-10 text-left my-4 mb-lg-0">
+        	<div class="d-inline-block">
+                  <div  class="bg-black py-2 px-4 mb-2 text-white d-inline-block rounded">
+                  	<span class="h5"  th:utext="${match.scoreHome +'  -  '+match.scoreAway}">3:2</span>
+                  </div>
+            </div>
+       	</div>
+       	<div th:if="!${match.status=='Match Finished'}" class="col-md-12 col-lg-10 text-left my-4 mb-lg-0">
+        	<div class="d-inline-block">
+                  <div class="bg-black py-2 px-4 mb-2 text-white d-inline-block rounded">
+                  	<span class="h5" >A venir</span>
+                  </div>
+            </div>
+       	</div>
+      </td>
+      <td>
+   		 <div class="col-md-4 col-lg-4 text-center text-lg-left float-none ">
+                <div class="">
+                  <div class="d-block d-lg-flex align-items-center">
+                    <div class="image image-small text-center ml-lg-3 mb-3 mb-lg-0 mr-lg-3">
+                      <img th:src="${match.teamAway.logo}" alt="Image" class="img-fluid">
+                    </div>
+                    <div class="text order-1 w-100">
+                      <h3 class="h5 mb-0 text-black" th:utext="${match.teamAway.name}">Steelers</h3>
+<!--                       <span class="text-uppercase small country text-black">London</span> -->
+                    </div>
+                  </div>
+                </div>
+              </div>
+      </td>
+     
+      
+    </tr>
+  </tbody>
+  
+</table>
+<table th:if="${matchsToCome}" id="dtBasicExample" class="table  " cellspacing="0" width="100%">
+  <thead>
+    <tr>
+    
+     	<th class="th-sm">Date</th>
+		<th class="th-sm">Team domicile</th>
+		<th class="th-sm">Score</th>
+		<th class="th-sm">Team extérieure</th>
+
+    </tr>
+  </thead>
+  <tbody>
+    <tr th:each="match:${matchsToCome}">
+    <td >
+      	<div class="text-center float-left">
+           <div class="d-block d-lg-flex align-items-center">
+             
+             <div class="text">
+               <h3 class="h5 mb-0 text-black" th:utext="${match.date}">17-02-2022</h3>
+             </div>
+           </div>
+         </div>
+      </td>
+   
+      <td>
+      	<div class="text-center text-lg-left float-none ">
+           <div class="d-block d-lg-flex align-items-center">
+             <div class="image image-small text-center mb-3 mb-lg-0 mr-lg-3">
+               <img th:src="${match.teamHome.logo}" alt="Image" class="img-fluid">
+             </div>
+             <div class="text">
+               <h3 class="h5 mb-0 text-black" th:utext="${match.teamHome.name}">Packers</h3>
+<!--                <span class="text-uppercase small country text-black">Brazil</span> -->
+             </div>
+           </div>
+         </div>
+      </td>
+      <td>
+      	<div th:if="${match.status=='Match Finished'}" class="col-md-12 col-lg-10 text-left my-4 mb-lg-0">
+        	<div class="d-inline-block">
+                  <div  class="bg-black py-2 px-4 mb-2 text-white d-inline-block rounded">
+                  	<span class="h5"  th:utext="${match.scoreHome +'  -  '+match.scoreAway}">3:2</span>
+                  </div>
+            </div>
+       	</div>
+       	<div th:if="!${match.status=='Match Finished'}" class="col-md-12 col-lg-10 text-left my-4 mb-lg-0">
+        	<div class="d-inline-block">
+                  <div class="bg-black py-2 px-4 mb-2 text-white d-inline-block rounded">
+                  	<span class="h5" >A venir</span>
+                  </div>
+            </div>
+       	</div>
+      </td>
+      <td>
+   		 <div class="col-md-4 col-lg-4 text-center text-lg-left float-none ">
+                <div class="">
+                  <div class="d-block d-lg-flex align-items-center">
+                    <div class="image image-small text-center ml-lg-3 mb-3 mb-lg-0 mr-lg-3">
+                      <img th:src="${match.teamAway.logo}" alt="Image" class="img-fluid">
+                    </div>
+                    <div class="text order-1 w-100">
+                      <h3 class="h5 mb-0 text-black" th:utext="${match.teamAway.name}">Steelers</h3>
+<!--                       <span class="text-uppercase small country text-black">London</span> -->
+                    </div>
+                  </div>
+                </div>
+              </div>
+      </td>
+     
+      
+    </tr>
+  </tbody>
+  
+</table>
+<table th:if="${matchsFinished}" id="dtBasicExample" class="table  " cellspacing="0" width="100%">
+  <thead>
+    <tr>
+    
+     	<th class="th-sm">Date</th>
+		<th class="th-sm">Team domicile</th>
+		<th class="th-sm">Score</th>
+		<th class="th-sm">Team extérieure</th>
+
+    </tr>
+  </thead>
+  <tbody>
+    <tr th:each="match:${matchsFinished}">
+    <td >
+      	<div class="text-center float-left">
+           <div class="d-block d-lg-flex align-items-center">
+             
+             <div class="text">
+               <h3 class="h5 mb-0 text-black" th:utext="${match.date}">17-02-2022</h3>
+             </div>
+           </div>
+         </div>
+      </td>
+   
+      <td>
+      	<div class="text-center text-lg-left float-none ">
+           <div class="d-block d-lg-flex align-items-center">
+             <div class="image image-small text-center mb-3 mb-lg-0 mr-lg-3">
+               <img th:src="${match.teamHome.logo}" alt="Image" class="img-fluid">
+             </div>
+             <div class="text">
+               <h3 class="h5 mb-0 text-black" th:utext="${match.teamHome.name}">Packers</h3>
+<!--                <span class="text-uppercase small country text-black">Brazil</span> -->
+             </div>
+           </div>
+         </div>
+      </td>
+      <td>
+      	<div th:if="${match.status=='Match Finished'}" class="col-md-12 col-lg-10 text-left my-4 mb-lg-0">
+        	<div class="d-inline-block">
+                  <div  class="bg-black py-2 px-4 mb-2 text-white d-inline-block rounded">
+                  	<span class="h5"  th:utext="${match.scoreHome +'  -  '+match.scoreAway}">3:2</span>
+                  </div>
+            </div>
+       	</div>
+       	<div th:if="!${match.status=='Match Finished'}" class="col-md-12 col-lg-10 text-left my-4 mb-lg-0">
+        	<div class="d-inline-block">
+                  <div class="bg-black py-2 px-4 mb-2 text-white d-inline-block rounded">
+                  	<span class="h5" >A venir</span>
+                  </div>
+            </div>
+       	</div>
+      </td>
+      <td>
+   		 <div class="col-md-4 col-lg-4 text-center text-lg-left float-none ">
+                <div class="">
+                  <div class="d-block d-lg-flex align-items-center">
+                    <div class="image image-small text-center ml-lg-3 mb-3 mb-lg-0 mr-lg-3">
+                      <img th:src="${match.teamAway.logo}" alt="Image" class="img-fluid">
+                    </div>
+                    <div class="text order-1 w-100">
+                      <h3 class="h5 mb-0 text-black" th:utext="${match.teamAway.name}">Steelers</h3>
+<!--                       <span class="text-uppercase small country text-black">London</span> -->
+                    </div>
+                  </div>
+                </div>
+              </div>
+      </td>
+     
+      
+    </tr>
+  </tbody>
+  
+</table>
+<table th:if="${matchsByDate}" id="dtBasicExample" class="table  " cellspacing="0" width="100%">
+  <thead>
+    <tr>
+    
+     	<th class="th-sm">Date</th>
+		<th class="th-sm">Team domicile</th>
+		<th class="th-sm">Score</th>
+		<th class="th-sm">Team extérieure</th>
+
+    </tr>
+  </thead>
+  <tbody>
+    <tr th:each="match:${matchsByDate}">
+    <td >
+      	<div class="text-center float-left">
+           <div class="d-block d-lg-flex align-items-center">
+             
+             <div class="text">
+               <h3 class="h5 mb-0 text-black" th:utext="${match.date}">17-02-2022</h3>
+             </div>
+           </div>
+         </div>
+      </td>
+   
+      <td>
+      	<div class="text-center text-lg-left float-none ">
+           <div class="d-block d-lg-flex align-items-center">
+             <div class="image image-small text-center mb-3 mb-lg-0 mr-lg-3">
+               <img th:src="${match.teamHome.logo}" alt="Image" class="img-fluid">
+             </div>
+             <div class="text">
+               <h3 class="h5 mb-0 text-black" th:utext="${match.teamHome.name}">Packers</h3>
+<!--                <span class="text-uppercase small country text-black">Brazil</span> -->
+             </div>
+           </div>
+         </div>
+      </td>
+      <td>
+      	<div th:if="${match.status=='Match Finished'}" class="col-md-12 col-lg-10 text-left my-4 mb-lg-0">
+        	<div class="d-inline-block">
+                  <div  class="bg-black py-2 px-4 mb-2 text-white d-inline-block rounded">
+                  	<span class="h5"  th:utext="${match.scoreHome +'  -  '+match.scoreAway}">3:2</span>
+                  </div>
+            </div>
+       	</div>
+       	<div th:if="!${match.status=='Match Finished'}" class="col-md-12 col-lg-10 text-left my-4 mb-lg-0">
+        	<div class="d-inline-block">
+                  <div class="bg-black py-2 px-4 mb-2 text-white d-inline-block rounded">
+                  	<span class="h5" >A venir</span>
+                  </div>
+            </div>
+       	</div>
+      </td>
+      <td>
+   		 <div class="col-md-4 col-lg-4 text-center text-lg-left float-none ">
+                <div class="">
+                  <div class="d-block d-lg-flex align-items-center">
+                    <div class="image image-small text-center ml-lg-3 mb-3 mb-lg-0 mr-lg-3">
+                      <img th:src="${match.teamAway.logo}" alt="Image" class="img-fluid">
+                    </div>
+                    <div class="text order-1 w-100">
+                      <h3 class="h5 mb-0 text-black" th:utext="${match.teamAway.name}">Steelers</h3>
+<!--                       <span class="text-uppercase small country text-black">London</span> -->
+                    </div>
+                  </div>
+                </div>
+              </div>
+      </td>
+     
+      
     </tr>
   </tbody>
   
