comit inscription login validation base de données

--- a/sportResultBoot/src/main/resources/templates/login.html
+++ b/sportResultBoot/src/main/resources/templates/login.html
@@ -99,7 +99,7 @@ function myFunction() {
 	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100">
-				<form action = "team" method= "post" class="login100-form validate-form">
+				<form action = "login" method= "post" class="login100-form validate-form">
 					<span class="login100-form-title p-b-34">
 						Se connecter
 					</span>
@@ -109,7 +109,7 @@ function myFunction() {
 						<span class="focus-input100"></span>
 					</div>
 					<div class="wrap-input100 rs2-wrap-input100 validate-input m-b-20" data-validate="Type password">
-						<input class="input100" type="password" name="pass" placeholder="mot de passe">
+						<input class="input100" type="password" name="password" placeholder="mot de passe">
 						<span class="focus-input100"></span>
 					</div>
 					
