--- a/sportResultBoot/src/main/resources/templates/login.html
+++ b/sportResultBoot/src/main/resources/templates/login.html
@@ -103,7 +103,7 @@ function myFunction() {
 					<span class="login100-form-title p-b-34">
 						Se connecter
 					</span>
-					
+					<div style="color:red" th:utext="${wrongLogin}"></div>
 					<div class="wrap-input100 rs1-wrap-input100 validate-input m-b-20" data-validate="Type user name">
 						<input id="first-name" class="input100" type="text" name="email" placeholder="email" required="true">
 						<span class="focus-input100"></span>
