--- a/sportResultBoot/src/main/resources/static/css/style.css
+++ b/sportResultBoot/src/main/resources/static/css/style.css
@@ -1179,3 +1179,28 @@ a:hover {
   color: #fff;
   border: 1px solid transparent;
 }
+
+.image-logo {
+	width: 100px;
+	heigt: 100px;
+	border: 1px solid black
+}
+
+.block-score{
+	background-color: #F5D547;
+	
+}
+
+.btn {
+  background-color: #EBEBD3; /* Blue background */
+  border: none; /* Remove borders */
+  color: white; /* White text */
+  padding: 12px 16px; /* Some padding */
+  font-size: 16px; /* Set a font size */
+  cursor: pointer; /* Mouse pointer on hover */
+}
+
+/* Darker background on mouse-over */
+.btn:hover {
+  background-color: #F5D547 ;
+}
