--- a/sportResultBoot/src/main/resources/templates/index.html
+++ b/sportResultBoot/src/main/resources/templates/index.html
@@ -49,28 +49,19 @@
           <ul class="site-menu js-clone-nav d-none d-md-block">
             <li class="active"><a  th:href="@{/index}">Accueil</a></li>
             <li ><a th:href="@{/calendrier}">Calendrier</a></li>
-            <li class="has-children">
-              <a  href="#">Classement</a>
-              <ul class="dropdown arrow-top">
-                <li><a th:href="@{/classement1}">Ligue 1</a></li>
-                <li><a th:href="@{/classement2}">Ligue 2</a></li>
-                
-              </ul>
-            </li>
-            <li class="has-children">
-              <a href="#">Mes favoris</a>
-              <ul class="dropdown arrow-top">
-                <li><a th:href="@{/monChampionnat}">Mon championnat</a></li>
-                <li><a th:href="@{/monEquipe}">Mon équipe</a></li>
-                <li><a th:href="@{/mesJoueurs}">Mes joueurs</a></li>
-              </ul>
-            </li>
-            <li class="has-children">
-              <a href="compte.html">Mon compte</a>
-              <ul class="dropdown arrow-top">
-                <li><a th:href="@{/login}">Se connecter</a></li>
-                <li><a th:href="@{/inscription}">S'inscrire</a></li>
-                <li><a href="#">Se déconnecter</a></li>
+            <li ><a th:href="@{/matchendirect}">Match en direct</a></li>
+					
+			<li class="has-children"><a href="#">Mes favoris</a>
+				<ul class="dropdown arrow-top">
+					<li><a th:href="@{/monChampionnat}">Mon championnat</a></li>
+					<li><a th:href="@{/monEquipe}">Mon équipe</a></li>
+					<li><a th:href="@{/mesJoueurs}">Mes joueurs</a></li>
+				</ul></li>
+			<li class="has-children"><a href="compte.html">Mon compte</a>
+				<ul class="dropdown arrow-top">
+					<li><a th:href="@{/login}">Se connecter</a></li>
+           					<li><a th:href="@{/inscription}">S'inscrire</a></li>
+             				<li><a th:href="@{/logout}">Se déconnecter</a></li>
               </ul>
             </li>
             
