--- a/sportResultBoot/src/main/resources/templates/mesJoueurs.html
+++ b/sportResultBoot/src/main/resources/templates/mesJoueurs.html
@@ -89,28 +89,19 @@
           <ul class="site-menu js-clone-nav d-none d-md-block">
             <li ><a  th:href="@{/index}">Accueil</a></li>
             <li ><a th:href="@{/calendrier}">Calendrier</a></li>
-            <li class="has-children">
-              <a  href="#">Classement</a>
-              <ul class="dropdown arrow-top">
-                <li><a th:href="@{/classement1}">Ligue 1</a></li>
-                <li><a th:href="@{/classement2}">Ligue 2</a></li>
-                
-              </ul>
-            </li>
-            <li class="has-children active">
-              <a href="#">Mes favoris</a>
-              <ul class="dropdown arrow-top">
-                <li><a th:href="@{/monChampionnat}">Mon championnat</a></li>
-                <li><a th:href="@{/monEquipe}">Mon équipe</a></li>
-                <li><a th:href="@{/mesJoueurs}">Mes joueurs</a></li>
-              </ul>
-            </li>
-            <li class="has-children">
-              <a href="compte.html">Mon compte</a>
-              <ul class="dropdown arrow-top">
-                <li><a th:href="@{/login}">Se connecter</a></li>
-                <li><a th:href="@{/inscription}">S'inscrire</a></li>
-                <li><a href="#">Se déconnecter</a></li>
+            <li ><a th:href="@{/matchendirect}">Match en direct</a></li>
+					
+			<li class="has-children active"><a href="#">Mes favoris</a>
+				<ul class="dropdown arrow-top">
+					<li ><a th:href="@{/monChampionnat}">Mon championnat</a></li>
+					<li><a th:href="@{/monEquipe}">Mon équipe</a></li>
+					<li><a th:href="@{/mesJoueurs}">Mes joueurs</a></li>
+				</ul></li>
+			<li class="has-children"><a href="compte.html">Mon compte</a>
+				<ul class="dropdown arrow-top">
+					<li><a th:href="@{/login}">Se connecter</a></li>
+           					<li><a th:href="@{/inscription}">S'inscrire</a></li>
+             				<li><a th:href="@{/logout}">Se déconnecter</a></li>
               </ul>
             </li>
             
@@ -119,15 +110,28 @@
       </nav>
     </header>
   
-    <div class="site-blocks-cover overlay" style="background-image: url(images/hero_bg_3.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
-      <div class="container">
-        <div class="row align-items-center justify-content-start">
-          <div class="col-md-6 text-center text-md-left" data-aos="fade-up" data-aos-delay="400">
-            <h1 class="bg-text-line">Mes joueurs</h1>
-            <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad maxime velit nostrum praesentium voluptatem. Mollitia perferendis dolore dolores.</p>
+    <div class="slide-one-item home-slider owl-carousel">
+      <div class="site-blocks-cover overlay" style="background-image: url(images/hero_bg_2.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
+        <div class="container">
+          <div class="row align-items-center justify-content-start">
+            <div class="col-md-6 text-center text-md-left" data-aos="fade-up" data-aos-delay="400">
+              <h1 class="bg-text-line">Mon championnat </h1>
+              <p><a th:href="@{/monChampionnat}" class="btn btn-primary btn-sm rounded-0 py-3 px-5"> En savoir plus </a></p>
+            </div>
           </div>
         </div>
-      </div>
+      </div>  
+
+      <div class="site-blocks-cover overlay" style="background-image: url(images/canb.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
+        <div class="container">
+          <div class="row align-items-center justify-content-start">
+            <div class="col-md-6 text-center text-md-left" data-aos="fade-up" data-aos-delay="400">
+              <h1 class="bg-text-line">Match à venir </h1>
+              <p><a th:href="@{/matchToCome}" class="btn btn-primary btn-sm rounded-0 py-3 px-5">En savoir plus</a></p>
+            </div>
+          </div>
+        </div>
+      </div>  
     </div>
 
     
@@ -139,9 +143,9 @@
         <div class="row mb-5">
         <div class="text-center col-md-12">
         <p>
-        <a href="monChampionnat.html" class="btn btn-primary btn-sm rounded-0 py-2 px-1 float-left">Mon championnat</a>
-        <a href="monEquipe.html" class="btn btn-primary btn-sm rounded-0 py-2 px-1 float-none ">Mon équipe</a>
-        <a href="mesJoueurs.html" class="btn btn-primary btn-sm rounded-0 py-2 px-1 float-right active">Mes joueurs</a></p>
+        <a th:href="@{/monChampionnat}" class="btn btn-primary btn-sm rounded-0 py-2 px-1 float-left">Mon championnat</a>
+        <a th:href="@{/monEquipe}" class="btn btn-primary btn-sm rounded-0 py-2 px-1 float-none ">Mon équipe</a>
+        <a th:href="@{/mesJoueurs}" class="btn btn-primary btn-sm rounded-0 py-2 px-1 float-right active">Mes joueurs</a></p>
         </div></div>
         
         <div class="row mb-5">
